# sample_fastapi_app

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker_compose.yml  my_database.db  my_test_database.db  pyproject.toml
src/app/: db_setup.py  import_routes.py  main.py
src/models/: api_schema.py  app_models.py  database.py
src/prequin_apis/: api_schema.py  generate_array_api.py
src/prequin_apis/service/: array_generator.py
src/user_apis/: api_schema.py  create_token.py  user_auth_api.py
tests/: test_app.py  test_datases.py
