[tool.poetry]
name = "preqin-test"
version = "0.1.0"
description = ""
authors = ["ritesh <d25ritesh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.104.0"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
databases = "^0.8.0"
uvicorn = "^0.23.2"
aiosqlite = "^0.19.0"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
pytest = "^7.4.2"
httpx = "^0.25.0"
asyncpg = "^0.28.0"
psycopg2 = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
